--- a/requirements.txt
+++ b/requirements.txt
@@ -22,23 +22,25 @@ Faker==24.4.0
 fastapi==0.115.12
 greenlet==3.0.3
 gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.5
+h11==0.16.0
+httpcore==1.0.9
 httpx==0.27.0
 idna==3.6
 iniconfig==2.0.0
 Mako==1.3.2
+markdown2==2.5.3
 MarkupSafe==2.1.5
 packaging==24.0
 passlib==1.7.4
 pluggy==1.4.0
 psycopg==3.1.18
 psycopg2-binary==2.9.9
-pyasn1==0.4.1,<=0.5.0
+pyasn1==0.4.1
 pycparser==2.22
 pydantic==2.6.4
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
+PyJWT==2.10.1
 PyMySQL==1.1.1
 pypng==0.20220715.0
 pytest==8.1.1
@@ -59,5 +61,3 @@ tomli==2.0.1
 typing_extensions==4.10.0
 uvicorn==0.29.0
 validators==0.24.0
-markdown2
-pyjwt
